fullSandbox11072023/force-app/main/default/objects/LATAM_Target__c/LATAM_Target__c.object-meta.xml
<CustomObject>
    <description>This object is used when loading the target data for the rainbow report.  Targets should be loaded in thousands (000&apos;s).</description>
    <label>LATAM Sales Goal</label>
    <nameField>
        <displayFormat>RRT-{00000}</displayFormat>
        <label>LATAM Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LATAM Sales Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>