fullSandbox11072023/force-app/main/default/objects/LATAM_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_ID__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Sales_Region_Formula__c</columns>
    <columns>Target_Amount__c</columns>
    <columns>Year__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>